<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="500dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.511">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/hidden_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_start_BT"
                style="@style/welcome_sheet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_start_BT" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_login_BT"
                style="@style/welcome_sheet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_login_BT" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_reg_BT"
                style="@style/welcome_sheet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_reg_BT" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:background="#BCBCBC" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>